# No42_work_bi_CC

./: .cursorignore  .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile.dev  fix_remaining_tests.sh  fix_tests.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  response.py
backend/app/core/: config.py  password_policy.py  security.py
backend/app/db/: __init__.py  dynamodb.py  s3.py
backend/app/models/: __init__.py  audit_log.py  card.py  chat.py  common.py  dashboard.py  dashboard_share.py  dataset.py  dataset_summary.py  filter_view.py  group.py  schema_change.py  transform.py  transform_execution.py  user.py
backend/app/repositories/: __init__.py  audit_log_repository.py  base.py  card_repository.py  dashboard_repository.py  dashboard_share_repository.py  dataset_repository.py  filter_view_repository.py  group_member_repository.py  group_repository.py  transform_execution_repository.py  transform_repository.py  user_repository.py
backend/app/services/: audit_service.py  card_execution_service.py  chatbot_service.py  dashboard_service.py  dataset_service.py  dataset_summarizer.py  parquet_storage.py  permission_service.py  schema_comparator.py  transform_execution_service.py  transform_scheduler_service.py  type_inferrer.py
backend/tests/: conftest.py
backend/tests/api/: test_deps.py  test_health.py
backend/tests/core/: test_config.py  test_config_chatbot.py  test_logging.py  test_password_policy.py  test_security.py
backend/tests/db/: test_dynamodb.py  test_s3.py
codemaps/: backend.md  (+3 more)
(+329 files in other folders)
